<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Comet Blue</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
   

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="not_available">not available</string>
    <string name="info">author: humback@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="unknown_device">Unknown device</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">--</string>
    
    <string name="actual">Actual</string>
    <string name="target">Target</string>
    <string name="economy">Economy</string>
    <string name="comfort">Comfort</string>
     <string name="set_temp">Set</string>
      <string name="set_label">Change target temperature</string>
     <string name="pin_prompt">PIN</string>
    
</resources>
