<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
   	 xmlns:app="http://schemas.android.com/apk/res-auto"
   	 xmlns:tools="http://schemas.android.com/tools"
   	 tools:context="com.example.cometblue.DeviceControlActivity" >    
    <item android:id="@+id/menu_connect"
          android:title="@string/menu_connect"
          android:orderInCategory="100"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/menu_disconnect"
          android:title="@string/menu_disconnect"
          android:orderInCategory="101"
          app:showAsAction="always|withText"/>
    
   <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
   <item
        android:id="@+id/action_refresh"
        android:orderInCategory="102"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
</menu>


