<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cometblue.MainActivity" >
  <item android:id="@+id/menu_refresh"
        android:title=""
          android:checkable="false"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"/> 
    <item android:id="@+id/menu_scan"
          android:title="@string/menu_scan"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_stop"
          android:title="@string/menu_stop"
          android:orderInCategory="101"
          app:showAsAction="ifRoom|withText"/>
     <item
        android:id="@+id/action_info"
        android:orderInCategory="102"
        android:title="@string/action_info"
        app:showAsAction="never"/>

</menu>
